tests/final/expect/15__diag__malformed_token_stream_seeded_a_no_crash.diag
Diagnostics:
Error: Unexpected token at start of expression at /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_token_stream_seeded_a_no_crash.c:3 (got '^')
Error at (3:10): Operator '^' requires integer operands
   Spelling: /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_token_stream_seeded_a_no_crash.c:3:10
Error at (3:5): Incompatible assignment operands
   Spelling: /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_token_stream_seeded_a_no_crash.c:3:5
